--- a/docs/UML/classes/task.adoc
+++ b/docs/UML/classes/task.adoc
@@ -24,4 +24,7 @@ h|*0..1*
 a|References to order(s) being created and / or tracked by this Task. The value(s) must match `ORDER_REF._order_tag_` values from the list `WORK_PLAN._order_list_` and be unique within the list.
 
 Multiple tags are only required if the same Task causes creation of, or tracks, more than one order.
+
+h|*Invariants*
+2+a|*_Inv_order_tags_*: `order_tags /= Void implies not order_tags.is_empy`
 |===
