--- a/docs/UML/classes/defined_action.adoc
+++ b/docs/UML/classes/defined_action.adoc
@@ -19,7 +19,7 @@ h|*Attributes*
 
 h|*0..1*
 |*prototype*: `List<ENTRY>`
-a|Prototype instance of one or more Entries that express the specific work of the Task. Normally one Entry would be used, typically an `ACTION`, but more than one may sometimes make sense, e.g. an `ACTION` and an `OBSERVATION`.
+a|Prototype instance of one or more openEHR EHR Entries that express the specific work of the Task. Normally one Entry would be used, typically an `ACTION`, but more than one may sometimes make sense, e.g. an `ACTION` and an `OBSERVATION`.
 
 h|*0..1*
 |*optionality*: `VALIDITY_KIND`
