--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -6,13 +6,19 @@
 
 4+^h|*PROC Release 1.?.?*
 
-|[[latest_issue]]1.4.0
+|[[latest_issue]]1.4.1
+|{spec_tickets}/SPECPROC-26[SPECPROC-26^]. Dataset improvements: make `DATASET_SPEC` inherit from `LOCATABLE`; support form sub-sections.
+|M Kejžar, +
+ T Beale
+|[[latest_issue_date]]20 Jun 2019
+
+|1.4.0
 |{spec_tickets}/SPECPROC-24[SPECPROC-24^]. Add Order tracking to model.
 |M Kejžar, +
  M Polajnar, +
  T Beale, +
  B Naess
-|[[latest_issue_date]]29 May 2019
+|29 May 2019
 
 |1.3.0
 |{spec_tickets}/SPECPROC-22[SPECPROC-22^]. Enable Callbacks to be manually notified.
