Changes for SPECPROC-28 - Improve definition of TIMELINE_MOMENT and TIMER_EVENT.
Changes for SPECPROC-29 - Add guideline_step to PLAN_ITEM; make Work Plan and Task Plan refs more flexible.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -24,8 +24,6 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_calendar_event_class[CALENDAR_EVENT^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_calendar_time_class[CALENDAR_TIME^]
-[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_callback_notification_class[CALLBACK_NOTIFICATION^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_callback_wait_class[CALLBACK_WAIT^]
@@ -162,6 +160,10 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_plan_timeline_class[PLAN_TIMELINE^]
 [.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_plan_time_origin_enumeration[PLAN_TIME_ORIGIN^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_publication_reference_class[PUBLICATION_REFERENCE^]
+[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_query_call_class[QUERY_CALL^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_reminder_class[REMINDER^]
@@ -227,3 +229,16 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_time_specifier_class[TIME_SPECIFIER^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_work_plan_class[WORK_PLAN^]
+
+==== Package zz-test
+
+[.xcode]
+* link:/releases/PROC/{proc_release}/zz-test.html#_api_call_class[API_CALL^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/zz-test.html#_parameter_def_class[PARAMETER_DEF^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/zz-test.html#_parameter_mapping_class[PARAMETER_MAPPING^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/zz-test.html#_query_call_class[QUERY_CALL^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/zz-test.html#_system_call_class[SYSTEM_CALL^]
