--- a/docs/UML/classes/time_specifier.adoc
+++ b/docs/UML/classes/time_specifier.adoc
@@ -6,6 +6,6 @@ h|*Class*
 2+^h|*_TIME_SPECIFIER (abstract)_*
 
 h|*Description*
-2+a|Abstract parent of types used to specify a point in time.
+2+a|Abstract parent of types used to specify a point in time during a day.
 
 |===
