--- a/docs/UML/classes/timeline_moment.adoc
+++ b/docs/UML/classes/timeline_moment.adoc
@@ -8,9 +8,11 @@ h|*Class*
 h|*Description*
 2+a|Specifies a time event generated during execution when the Plan clock reaches a specific point defined in the global Plan Timeline. The time of this timeline moment is calculated as the `_fixed_time_` in the day, e.g. `14:30:00`, no matter when the Plan is activated.
 
-The `_timeline_offset_` attribute can be used to specify a particular offset with respect to the plan time origin. The `_fixed_time_` then corresponds to the first occurrence of that time on the clock _after_ the `_timeline_offset_` is passed.
+The `_timeline_offset_` attribute can be used to specify a particular offset with respect to a time origin, by default, the origin of the Work Plan. The `_fixed_time_` then corresponds to the first occurrence of that time on the clock _after_ the `_timeline_offset_` is passed.
 
 This can be used to specify particular times on particular days, e.g.: `07:30:00 on day 3`, `14:00:00 on day 5` and so on by setting `_timeline_offset_` to numbers of days, e.g. `P3D`, `P5D` etc. Note that a value of `P1D` means the first 24h period after Plan activation, whereas if `_timeline_offset_` is not set, the `_fixed_time_` is understood to specify the first moment after Plan activation that this time is reached on the Plan clock.
+
+The `_timeline_origin_` can be set to specify another time origin, such as the start of execution of the Task Plan, or of a repeat section.
 
 h|*Inherit*
 2+|`PLAN_EVENT`
@@ -26,4 +28,11 @@ a|Variable part of time specification, expressed as an offset from the zero time
 h|*0..1*
 |*fixed_time*: `TIME_SPECIFIER`
 a|Fixed time specifier, used to expressed a fixed moment in the day.
+
+h|*0..1*
+|*timeline_origin*: `PLAN_TIME_ORIGIN`
+a|Relative origin for `_timeline_offset_`. If not set, Work Plan activation is assumed as the time origin.
+
+h|*Invariants*
+2+a|*_Inv_validity_*: `timeline_offset /= Void or fixed_time /= Void`
 |===
